# CollegeProjectCourse1

./: CMakeLists.txt  GameEngine2D.cbp  GameEngine2D.cscope_file_list  GameEngine2D.depend  GameEngine2D.layout  README.md  conanfile.txt  image.xcf
include/: Camera.h  Camera.h.save  Canvas.h  Canvas.h.save  Engine.h  GameObject.h  Log.h  Render.h  Render.h.save  ResourceManager.h  Shader.h  Sprite.h  Sprite.h.save  TextSprite.h  TextureManager.h  TextureManager.h.save  Timer.h  Timet.h
include/Game/: Camera.h  LinesSprite.h  Simulation.h  Sprite.h  TextSprite.h
include/Game/UI/: ControlWindow.h  InfoWindow.h
include/Memory/: BlockAlloc.h.save  BlockPool.h  BlockPool.h.save  ChildObject.h  PagePool.h  PointerBumpAllocator.h
include/Render/: IRenderTask.h  LinesSpriteTask.h  Render.h  Shader.h  SpriteTask.h  TextSpriteTask.h
nuklear_cross/: nuklear_cross.h
nuklear_cross/nkc_frontend/: nkc_glfw.h
nuklear_cross/nkc_frontend/helpers/: nkc_stb_image.h
resources/shaders/: LinesFragment.glsl  LinesVertex.glsl  StandardFragment.glsl  StandardVertex.glsl  StandartFragment.glsl  TextFragment.glsl  TextVertex.glsl
src/: Engine.cpp  Log.cpp  Render.cpp  Render.cpp.save  ResourceManager.cpp  Shader.cpp  Sprite.cpp  TextSprite.cpp  TextureManager.cpp  TextureManager.cpp.save  Time.cpp  Time.cpp.save  Timer.cpp  main.cpp  main.cpp.save  prog.rc
src/Game/: LinesSprite.cpp  Simulation.cpp  Sprite.cpp
src/Game/UI/: ControlWindow.cpp  InfoWindow.cpp
src/ImGui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
src/Render/: LinesSpriteTask.cpp  Render.cpp  Shader.cpp  SpriteTask.cpp  TextSpriteTask.cpp
